/**
 * CA contract.
 */
syntax = "proto3";

package ca;

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";

service Ca {
    rpc Call (CallInput) returns (google.protobuf.Empty) {}
}

message CallInput {
    aelf.Hash ca_hash = 1;
    aelf.Address contract_address = 2;
    string method_name = 3;
    bytes args = 4;
}
